--- a/dangerdeep/SConstruct
+++ b/dangerdeep/SConstruct
@@ -177,6 +177,30 @@ def SelectBuildDir(build_dir, platform=None):
 	return target_dir
 
 
+# how this should work:
+# read basedir/CVS/Entries
+#  each directory has a D/aaa at the beginning, each file a /bbb
+#  recursivly subdivide into basedir/aaa
+#  add basedir/bbb to return list
+#  returns list of files in cvs
+def findCVS(basedir):
+	f = open(basedir + os.sep + 'CVS' + os.sep + 'Entries')
+	lines = f.readlines()
+	for l in lines:
+		print l
+		if l[0] == 'D':
+			print l.lstrip('D/')
+		else:
+			print l.lstrip('/')
+
+#	dirs = os.listdir(basedir)
+#	for dir in dirs:
+#		if os.path.isdir(dir):
+#			dirname = basedir + os.sep + dir
+#			print dirname
+#			findCVS(dirname)
+
+
 ################ build
 target_dir = '#' + SelectBuildDir(build_base_dir) 
 libpath = libpath + [target_dir]
@@ -187,6 +211,14 @@ Export('env', 'dftdsources', 'dftdmediasources', 'oglextsources', 'tinyxmlsource
 
 SConscript(target_dir + os.sep + 'SConscript') 
 
+#generate a list of all files from CVS subdirectories and give that list here!
+#env.Append(TARFLAGS = '-c -z')
+#env.Append(TARSUFFIX = '.gz')
+#env.Tar('dangerdeep-'+version, ['src', 'data'])
+#env.Zip is also possible
+
 BuildDir(target_dir, source_base_dir, duplicate=0) 
+
+print findCVS('.')
 
 ############# eof
