command line parsing for windows fixed, compile problem for linux in oglext fixed
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@827 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/SConstruct
+++ b/dangerdeep/SConstruct
@@ -30,7 +30,7 @@ if sys.platform == 'win32':
 	gllibs = ['opengl32', 'glu32']
 	sdllibs = ['SDL', 'SDL_image']
 	env.Append(CCFLAGS = '-Wall -O2 -D_REENTRANT') # for mingw!
-	datadir = '.\\data'
+	datadir = './data'
 else:
 	print "Compiling for Unix/Posix/Linux Environment"
 	env = Environment(ENV = os.environ)
